; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zpool/extr_zpool_main.c_zpool_has_checkpoint.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zpool/extr_zpool_main.c_zpool_has_checkpoint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@ZPOOL_CONFIG_VDEV_TREE = common dso_local global i32 0, align 4
@ZPOOL_CONFIG_CHECKPOINT_STATS = common dso_local global i32 0, align 4
@CS_NONE = common dso_local global i64 0, align 8
@B_FALSE = common dso_local global i32 0, align 4
@CS_CHECKPOINT_EXISTS = common dso_local global i64 0, align 8
@CS_CHECKPOINT_DISCARDING = common dso_local global i64 0, align 8
@B_TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @zpool_has_checkpoint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zpool_has_checkpoint(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_2__*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32* @zpool_get_config(i32* %8, i32* null)
  store i32* %9, i32** %4, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %47

12:                                               ; preds = %1
  store %struct.TYPE_2__* null, %struct.TYPE_2__** %6, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* @ZPOOL_CONFIG_VDEV_TREE, align 4
  %15 = call i32* @fnvlist_lookup_nvlist(i32* %13, i32 %14)
  store i32* %15, i32** %5, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = load i32, i32* @ZPOOL_CONFIG_CHECKPOINT_STATS, align 4
  %18 = bitcast %struct.TYPE_2__** %6 to i32**
  %19 = call i32 @nvlist_lookup_uint64_array(i32* %16, i32 %17, i32** %18, i32* %7)
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %21 = icmp eq %struct.TYPE_2__* %20, null
  br i1 %21, label %28, label %22

22:                                               ; preds = %12
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @CS_NONE, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %22, %12
  %29 = load i32, i32* @B_FALSE, align 4
  store i32 %29, i32* %2, align 4
  br label %49

30:                                               ; preds = %22
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* @CS_CHECKPOINT_EXISTS, align 8
  %35 = icmp eq i64 %33, %34
  br i1 %35, label %42, label %36

36:                                               ; preds = %30
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = load i64, i64* @CS_CHECKPOINT_DISCARDING, align 8
  %41 = icmp eq i64 %39, %40
  br label %42

42:                                               ; preds = %36, %30
  %43 = phi i1 [ true, %30 ], [ %41, %36 ]
  %44 = zext i1 %43 to i32
  %45 = call i32 @assert(i32 %44)
  %46 = load i32, i32* @B_TRUE, align 4
  store i32 %46, i32* %2, align 4
  br label %49

47:                                               ; preds = %1
  %48 = load i32, i32* @B_FALSE, align 4
  store i32 %48, i32* %2, align 4
  br label %49

49:                                               ; preds = %47, %42, %28
  %50 = load i32, i32* %2, align 4
  ret i32 %50
}

declare dso_local i32* @zpool_get_config(i32*, i32*) #1

declare dso_local i32* @fnvlist_lookup_nvlist(i32*, i32) #1

declare dso_local i32 @nvlist_lookup_uint64_array(i32*, i32, i32**, i32*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
